--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,19 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.mobile_menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100%;
+    z-index: 1000;
+    transform: translate(100%);
+    transition: all .25s ease-in-out;
+}
+
+.active-menu{
+    transform: translateX(0);
+}
