--- a/src/input.css
+++ b/src/input.css
@@ -3,15 +3,18 @@
 @tailwind utilities;
 
 
-.mobile_menu{
-    position: absolute;
-    top: 0;
-    right: 0;
-    height: 100vh;
-    width: 100%;
-    z-index: 1000;
-    transform: translate(100%);
-    transition: all .25s ease-in-out;
+@media (max-width: 768px) {
+    
+    .mobile_menu{
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100vh;
+        width: 100%;
+        z-index: 1000;
+        transform: translate(100%);
+        transition: all .25s ease-in-out;
+    }
 }
 
 .active-menu{
