MObile menu position fix

--- a/src/input.css
+++ b/src/input.css
@@ -6,7 +6,7 @@
 @media (max-width: 768px) {
     
     .mobile_menu{
-        position: absolute;
+        position:fixed;
         top: 0;
         right: 0;
         height: 100vh;
